container/kubernetes/laravel_k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laravel_testing
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: laravel
        version: testing
    spec:
      containers:
      - name: code
        image: laravel/php_code:v1.0.0
        volumeMounts:
        - mountPath: /data/php_code
          name: code_volume
      - name: fpm
        image: laravel/php-fpm:v1.0.0
        imagePullPolicy: IfNotPresent
        resources:
           limits:
             cpu: 350m
             memory: 350Mi
           requests:
             cpu: 50m
             memory: 50Mi
        ports:
        - name: fpm
          containerPort: 9000
        volumeMounts:
        - mountPath: /data/php_code
          name: code_volume
        - mountPath: /var/log
          name: log_volume 
      - name: nginx
        image: laravel/nginx:v1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 350m
            memory: 350Mi
          requests:
            cpu: 50m
            memory: 50Mi
        ports:
        - name: nginx_www
          containerPort: 80
        volumeMounts:
        - mountPath: /data/code
          name: code_volume
        - mountPath: /var/log
          name: log_volume
      volumes:
      - name: code_volume
        emptyDir: {}
      - name: log_volume
        hostPath:
          path: /var/log
          type: Directory
